[package]
name = "squashfuse-rs"
version = "0.1.0"
edition = "2021"
authors = [ "Ryan Brue <ryanbrue@gmail.com>" ]
repository = "https://github.com/ryanabx/appimage-rs"
license = "MIT"
readme = "README.md"
description = "FUSE implementation of Squashfs written in Rust. Inspired by Squashfuse"

[dependencies]
fuser = "0.14.0"
libc = "0.2.155"
squashfs-ng = "0.1.3"
thiserror = "1.0.63"
