[package]
name = "squashfuse-rs"
version = "0.3.0"
edition = "2021"
authors = [ "Ryan Brue <ryanbrue@gmail.com>" ]
repository = "https://github.com/linux-packaging-rs/squashfuse-rs"
license = "MIT"
readme = "README.md"
description = "FUSE implementation of Squashfs written in Rust."

[dependencies]
backhand = "0.18.0"
fuser = "0.14.0"
libc = "0.2.155"
thiserror = "1.0.63"
