[package]
name = "squashfuse-rs"
version = "0.3.0"
edition = "2021"
authors = [ "Ryan Brue <ryanbrue@gmail.com>" ]
repository = "https://github.com/linux-packaging-rs/squashfuse-rs"
license = "MIT"
readme = "README.md"
description = "FUSE implementation of Squashfs written in Rust."

[dependencies]
backhand.workspace = true
fuser.workspace = true
libc.workspace = true
thiserror.workspace = true
